<resources>
    <string name="app_name">HomeTask</string>
    <string name="title_activity_main">Hometask</string>

    <!--Content descriptions-->
    <string name="logo">Logo do aplicativo</string>

    <!--Cadastro-->
    <string name="nome">Nome</string>
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="conf_senha">Confirmar Senha</string>
    <string name="salvar">Salvar</string>
    <string name="esqueci_senha">Esqueci a senha</string>
    <string name="entrar">Entrar</string>
    <string name="cadastrese">Cadastre-se</string>
    <string name="sair">Sair</string>
    <string name="nomecasa">Nome da casa</string>

    <string name="bem_vindo">Bem vindo!</string>
    <string name="bem_vindo_nome">Bem vindo %s!</string>
    <string name="text_input_name">Como você prefere que te chamemos?</string>
    <string name="choose_avatar">Escolha um avatar que combine com você</string>
    <string name="continuar">Continuar</string>




    <string-array name="casa_abas">
        <item>Tarefas</item>
        <item>Regras</item>
        <item>Moradores</item>
    </string-array>
</resources>
