<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <!--HasNameLayout-->
            <LinearLayout
                android:id="@+id/hasNameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/hasNameTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/bem_vindo_nome"
                    android:textSize="30sp" />
            </LinearLayout>

            <!--HasNotNameLayout-->
            <LinearLayout
                android:id="@+id/hasNotNameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/hasNotNameTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/bem_vindo"
                    android:textSize="30sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="6dp"
                    android:text="@string/text_input_name"
                    android:textSize="18sp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextNome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/nome" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:layout_marginBottom="24dp"
                android:text="@string/choose_avatar"
                android:textSize="18sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:id="@+id/recycler_view"
                tools:listitem="@layout/item_list_avatar"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                android:layout_height="match_parent"
                app:spanCount="4"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/continuar"
        app:backgroundTint="@color/colorAccent"
        android:id="@+id/btnContinue"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_margin="16dp"
        />

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#7CFFFFFF">

        <Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#7CFFFFFF" />
    </com.google.android.material.appbar.AppBarLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>